--- a/client/www/screens/distro/start/start.html
+++ b/client/www/screens/distro/start/start.html
@@ -1,1 +1,12 @@
-<p>test</p>
+<div class="floater">
+	<p>Complete the following to get started:</p>
+	
+	<div class="textBox">
+		<label>Full Name</label>
+		<input type="email" class="email" style="left: 212px;" placeholder="John Doe" value="" />
+	</div>
+	
+	<div class="continue">Continue</div>
+</div>
+
+<div class="bottomBar"></div>
