--- a/client/www/screens/distro/start/start.html
+++ b/client/www/screens/distro/start/start.html
@@ -3,7 +3,7 @@
 	
 	<div class="textBox">
 		<label>Full Name</label>
-		<input type="email" class="email" style="left: 212px;" placeholder="John Doe" value="" />
+		<input type="text" class="fullName" style="left: 212px;" placeholder="John Doe" value="" />
 	</div>
 	
 	<div class="continue">Continue</div>
