Add student info panel (sidebar) on list page.

--- a/client/www/screens/distro/list/list.html
+++ b/client/www/screens/distro/list/list.html
@@ -11,6 +11,10 @@
 	</ul>
 </div>
 
+<div class="studentInfoPanel">
+	
+</div>
+
 <div class="statusBar">
 	Logged in as <span class="currentUser"></span>.
 	<div class="logout">Change User</div>
