--- a/client/www/screens/distro/list/list.html
+++ b/client/www/screens/distro/list/list.html
@@ -12,7 +12,7 @@
 </div>
 
 <div class="studentInfoPanel">
-	
+	<p class="noneSelected">Select a student from the list on the left to continue.</p>
 </div>
 
 <div class="statusBar">
