Start adding info on selection of students.

--- a/client/www/screens/distro/list/list.html
+++ b/client/www/screens/distro/list/list.html
@@ -12,7 +12,12 @@
 </div>
 
 <div class="studentInfoPanel">
-	<p class="noneSelected">Select a student from the list on the left to continue.</p>
+	<!-- <p class="noneSelected">Select a student from the list on the left to continue.</p> -->
+	<p class="studentName">Chris Kuehl</p>
+	<p class="stats">
+		<strong>Books Purchased:</strong> <span class="numberPurchased">1</span> <br />
+		<strong>Picked Up:</strong> <span class="datePurchased">Tue May 22 @ 5:32 PM EST</span> <br />
+	</p>
 </div>
 
 <div class="statusBar">
