Add signature preview image to student list with test image.

--- a/client/www/screens/distro/list/list.html
+++ b/client/www/screens/distro/list/list.html
@@ -13,11 +13,14 @@
 
 <div class="studentInfoPanel">
 	<!-- <p class="noneSelected">Select a student from the list on the left to continue.</p> -->
-	<p class="studentName">Chris Kuehl</p>
-	<p class="stats">
-		<strong>Books Purchased:</strong> <span class="numberPurchased">1</span> <br />
-		<strong>Picked Up:</strong> <span class="datePurchased">Tue May 22 @ 5:32 PM EST</span> <br />
-	</p>
+	<div class="whenSelected">
+		<p class="studentName">Chris Kuehl</p>
+		<p class="stats">
+			<strong>Books Purchased:</strong> <span class="numberPurchased">1</span> <br />
+			<strong>Picked Up:</strong> <span class="datePurchased">Tue May 22 @ 5:32 PM EST</span>
+		</p>
+		<div class="sigPreview"></div>
+	</div>
 </div>
 
 <div class="statusBar">
