Add sidebar parts for when not collected.

--- a/client/www/screens/distro/list/list.html
+++ b/client/www/screens/distro/list/list.html
@@ -17,9 +17,11 @@
 		<p class="studentName">Chris Kuehl</p>
 		<p class="stats">
 			<strong>Books Purchased:</strong> <span class="numberPurchased">1</span> <br />
-			<strong>Picked Up:</strong> <span class="datePurchased">Tue May 22 @ 5:32 PM EST</span>
+			<strong>Picked Up:</strong> <span class="datePickedUp">Tue May 22 @ 5:32 PM EST</span>
 		</p>
 		<div class="sigPreview"></div>
+		<div class="voidPickup">Invalidate Pickup</div>
+		<div class="pickup">Pickup</div>
 	</div>
 </div>
 
