--- a/client/www/screens/distro/sign/sign.html
+++ b/client/www/screens/distro/sign/sign.html
@@ -1,1 +1,11 @@
-<p>sign screen test</p>
+<h1>Chris Kuehl</h1>
+
+<p>By signing, you are certifying that (1) you are the person whose name appears above, or a parent/guardian of that person, and (2) you have received your 1 yearbook.</p>
+
+<div class="signContainer">
+	<div class="signArea"></div>
+	<div class="signConfirm">
+		<div class="signOK"></div>
+		<div class="signClear"></div>
+	</div>
+</div>
