Look/feel changes to search bar.

--- a/client/www/screens/distro/list/list.html
+++ b/client/www/screens/distro/list/list.html
@@ -1,7 +1,7 @@
 <div class="searchBar">
 	<div class="textBox">
-		<label>Search Name</label>
-		<input type="text" class="searchName" style="left: 306px;" placeholder="" value="" />
+		<label></label>
+		<input type="text" class="searchName" style="left: 50px;" placeholder="Search Name" value="" />
 	</div>
 </div>
 
