--- a/client/www/screens/distro/start/start.html
+++ b/client/www/screens/distro/start/start.html
@@ -2,8 +2,8 @@
 	<p>Complete the following to get started:</p>
 	
 	<div class="textBox">
-		<label>Full Name</label>
-		<input type="text" class="fullName" style="left: 248px;" placeholder="John Doe" value="" />
+		<label></label>
+		<input type="text" class="fullName" style="left: 50px;" placeholder="Full Name" value="" />
 	</div>
 	
 	<div class="continue">Continue</div>
