Add canvas-spline library from Jacketeer app.

--- a/client/www/index.html
+++ b/client/www/index.html
@@ -51,6 +51,7 @@
 		<script src="js/lib/jquery-animate-enhanced.min.js"></script>
 		<script src="js/lib/jquery-textmetrics.js"></script>
 		<script src="js/lib/fastclick-20121202.js"></script>
+		<script src="js/lib/canvas-spline.js"></script>
 		<script src="js/lib/base64.js"></script>
 		<script src="js/lib/iscroll.js"></script>
 		<script src="js/lib/validate-email.js"></script>
