--- a/client/www/screens/distro/sign/sign.html
+++ b/client/www/screens/distro/sign/sign.html
@@ -3,7 +3,9 @@
 <p>By signing, you are certifying that (1) you are the person whose name appears above, or a parent/guardian of that person, and (2) you have received your 1 yearbook.</p>
 
 <div class="signContainer">
-	<div class="signArea"></div>
+	<div class="signArea">
+		<canvas id="signCanvas" width="1600" height="800"></canvas>
+	</div>
 	<div class="signConfirm">
 		<div class="signOK">Done</div>
 		<div class="signClear">Clear</div>
