Rephrasing legal stuff.

--- a/client/www/screens/distro/sign/sign.html
+++ b/client/www/screens/distro/sign/sign.html
@@ -1,6 +1,6 @@
 <h1>Christopher Kuehl</h1>
 
-<p>By signing, you are certifying that (1) you are the person whose name appears above, or a parent/guardian of that person, and (2) you have received your 1 yearbook.</p>
+<p>By signing, you certify: (1) you are either (a) the person whose name appears above or (b) a parent/guardian of that person and (2) you have received your 1 yearbook.</p>
 
 <div class="signContainer">
 	<div class="signArea">
