Best loading screen ever.

--- a/client/www/index.html
+++ b/client/www/index.html
@@ -23,8 +23,8 @@
 			<div id="contentHolder"></div>
 			<div id="loading">
 				<div id="loadingWindow">
-					<p  style="margin-top: 80px !important;"><!--<img src="css/assets/loadingBRfixed.gif" />--></p>
-					<p id="loadingText"></p>
+					<p  style="margin-top: 60px !important; margin-left: 50px;"><img width="360px" height="286px" src="css/assets/cat.gif" /></p>
+					<p style="color: black;" id="loadingText"></p>
 				</div>
 			</div>
 		</div>
