Disable autocomplete (etc.) on student list filter box.

--- a/client/www/screens/distro/list/list.html
+++ b/client/www/screens/distro/list/list.html
@@ -1,7 +1,7 @@
 <div class="searchBar">
 	<div class="textBox">
 		<label></label>
-		<input type="text" class="searchName" style="left: 50px;" placeholder="Search Name" value="" />
+		<input type="text" class="searchName" style="left: 50px;" placeholder="Search Name" value="" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false" />
 	</div>
 </div>
 
