Remove "test test" from start screen.

--- a/client/www/screens/distro/start/start.html
+++ b/client/www/screens/distro/start/start.html
@@ -3,7 +3,7 @@
 	
 	<div class="textBox">
 		<label></label>
-		<input type="text" class="fullName" style="left: 50px;" placeholder="Full Name" value="test test" />
+		<input type="text" class="fullName" style="left: 50px;" placeholder="Full Name" value="" />
 	</div>
 	
 	<div class="continue">Continue</div>
