Add background camera plugin.

--- a/client/www/index.html
+++ b/client/www/index.html
@@ -42,6 +42,7 @@
 		<!-- libraries -->
 		<script src="js/lib/cordova-2.7.0.js"></script>
 		<!-- <script src="js/lib/tabbar-20130122.js"></script> -->
+		<script src="js/lib/bgcamera.js"></script>
 		<script src="js/lib/loader.js"></script>
 		<script src="js/lib/strings.js"></script>
 		<script src="js/lib/array-remove.js"></script>
