Add warning about the camera in use.

--- a/client/www/screens/distro/sign/sign.html
+++ b/client/www/screens/distro/sign/sign.html
@@ -8,4 +8,5 @@
 		<div class="signOK">Done</div>
 		<div class="signClear">Clear</div>
 	</div>
+	<p class="cameraWarning"><br />To guard against yearbook theft, you are being recorded right now.</p>
 </div>
