Add clearing for buttons on signature screen and fix padding on warning.

--- a/client/www/screens/distro/sign/sign.html
+++ b/client/www/screens/distro/sign/sign.html
@@ -7,6 +7,7 @@
 	<div class="signConfirm">
 		<div class="signOK">Done</div>
 		<div class="signClear">Clear</div>
+		<div style="clear: both;"></div>
 	</div>
-	<p class="cameraWarning"><br />To guard against yearbook theft, you are being recorded right now.</p>
+	<p class="cameraWarning">To guard against yearbook theft, you are being recorded right now.</p>
 </div>
