--- a/client/www/screens/distro/start/start.html
+++ b/client/www/screens/distro/start/start.html
@@ -11,4 +11,7 @@
 
 <div class="bottomBar"></div>
 
-<div class="toggle">Toggle local</div>
+<div class="holder">
+	<div class="toggle">Toggle local</div>
+	<div class="toggleCam">Toggle camera</div>
+</div>
