Fix buttons appearance/text.

--- a/client/www/screens/distro/start/start.html
+++ b/client/www/screens/distro/start/start.html
@@ -11,7 +11,7 @@
 
 <div class="bottomBar"></div>
 
-<div class="holder">
-	<div class="toggle">Toggle local</div>
-	<div class="toggleCam">Toggle camera</div>
+<div class="buttonHolder">
+	<div class="toggle">Turn Local On</div>
+	<div class="toggleCam">Turn Camera On</div>
 </div>
