Make buttons flash and change values on tap.

--- a/client/www/screens/distro/start/start.html
+++ b/client/www/screens/distro/start/start.html
@@ -12,6 +12,6 @@
 <div class="bottomBar"></div>
 
 <div class="buttonHolder">
-	<div class="toggle">Turn Local On</div>
-	<div class="toggleCam">Turn Camera On</div>
+	<a class="toggleLocal">????</a>
+	<a class="toggleCamera">????</a>
 </div>
